[fix] add padding to footer for improved spacing

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -16,6 +16,7 @@ div a {
     /* box */
     background-color: #d9d9d9;
     border-radius: 1rem 1rem 0 0;
+    padding: 2rem 0;
     /* debug */
 }
 
